--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@ body{
     color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 5px #8F7CEC, 0 0 25px #8F7CEC, 
-    0 0 50px #8F7CEC, 0 0 100px #8F7CEC;
+    0 0 50px #8F7CEC, 0 0 100px #8F7CEC, 0 0 150px #8F7CEC, 
+    0 0 200px #8F7CEC, 0 0 300px #8F7CEC, 0 0 350px #8F7CEC ;
 }
 .button-form{
     display: flex;
